--- a/labs/lab1/about.html
+++ b/labs/lab1/about.html
@@ -16,6 +16,7 @@ in html
         <meta charset="utf-8" />
         <title> Joseph Barker: Personal Website </title>
         <link href="css/styles.css" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">    
      <style>
             body {
                     background-color: #000066 !important;
@@ -61,18 +62,19 @@ in html
                     <td>1</td>
                 </tr>
             </table>
+                <ul>
+                    <li><span class= "hobby">Video games</span>: I own several older consoles and like all kinds of games but my favorites are shooters and real time strategy games</li>
+                    <li><span class= "hobby">Camping</span>: I enjoy camping trips with family and friends. My favorite place to camp is Big Sur</li>
+                    <li><span class= "hobby">Hiking</span>: I love the excitement of hiking new trails. My favorite hike is to the top of Half Dome in Yosemite National Park</li>
+                    <li><span class= "hobby">Programming</span>: I spend at least two hours every day using and lerning programing laguages </li>
+                </ul>
         </div>
 
-<ul>
-    <li><span class= "hobby">Video games</span>: I own four consoles and like all kinds of games but my favorite is The Legend of Zelda</li>
-    <li><span class= "hobby">Soccer</span>: I am part of a team and we play every Saturday. I'm the goalie</li>
-    <li><span class= "hobby">Music</span>: I love all kinds of music but my favorite is R&B and Pop.</li>
-    <li><span class= "hobby">Programming</span>: I spend at least two hours every day using and lerning programing laguages </li>
-</ul>
+
         
        <!-- This is the footer -->
         <!-- The footer goes inside the body but not always -->
-        <footer id='foot'>
+        <footer>
             <hr width="50%">
             &copy; 2019. Joseph Barker - CST 336 Internet Programming <br />
             <strong>Disclaimer:</strong> The content of this page is fake. It's only for educatiol purposes.</strong>
