--- a/labs/lab1/contact.html
+++ b/labs/lab1/contact.html
@@ -16,6 +16,7 @@ in html
         <meta charset="utf-8" />
         <title> Joseph Barker: Personal Website </title>
         <link href="css/styles.css" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
      <style>
             body {
                     background-color: #000066 !important;
@@ -48,7 +49,7 @@ in html
         
         <!-- This is the footer -->
         <!-- The footer goes inside the body but not always -->
-        <footer id='foot'>
+        <footer>
             <hr width="50%">
             &copy; 2019. Joseph Barker - CST 336 Internet Programming <br />
             <strong>Disclaimer:</strong> The content of this page is fake. It's only for educatiol purposes.</strong>
