--- a/labs/lab3/index.html
+++ b/labs/lab3/index.html
@@ -65,6 +65,9 @@
     </body>
     
     <script>
+        /*global $*/
+        /*global localStorage*/
+        
         let q1_value = 20;
         let q2_value = 20;
         let q3_value = 20;
