--- a/hw/hw2/index.html
+++ b/hw/hw2/index.html
@@ -17,12 +17,12 @@
      <!--Question 1 -->
     <h2>1. What kind of lifestyle would you prefer?</h2>
     <form>
-        <label class = "radio-inline">   
+        <label class = "radio-inline"> 
             <input type="radio" name="q1" id="advt" value="Advent">Adventurous
-        </label>
-        <label class = "radio-inline">   
+        </label>   
+        <label class = "radio-inline"> 
             <input type="radio" name="q1" id="relx" value="Relax">Relaxed
-        </label>
+        </label>  
     </form>
     <br></br>
     <!--Question 2 -->
@@ -350,7 +350,7 @@
             
                 //Results
             if(greatest == orange){
-                $("#result").html("Cactus Cooler, you are generally a happy person looking at the bright side of things.");                
+                $("#result").html("Cactus Cooler, you are generally a happy person looking at the bright side of life.");                
                 $("#resultImg").html("<img src ='img/CC.png' alt='Cactus Cooler Logo'>");
             }else if (greatest == RB) {
                 $("#result").html("Root Beer, you are a little more hardcore than most, and enjoy tackling difficult challenges.");
