--- a/hw/hw2/index.html
+++ b/hw/hw2/index.html
@@ -8,7 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         <!--Custom Styles-->        
-        <link rel="stylesheet" href="css/style.css">    
+        <link rel="stylesheet" href="css/styles.css">    
     </head>
     <body>
     <div class="jumbotron">
